@@ -57,9 +57,6 @@
 #define TWITTER_PREF_HOME_TIMELINE_MAX_TWEETS "home_timeline_max_tweets"
 #define TWITTER_PREF_HOME_TIMELINE_MAX_TWEETS_DEFAULT 200
 
-#define TWITTER_PREF_LIST_MAX_TWEETS "list_max_tweets"
-#define TWITTER_PREF_LIST_MAX_TWEETS_DEFAULT 200
-
 #define TWITTER_PREF_TIMELINE_TIMEOUT "refresh_timeline_minutes"
 #define TWITTER_PREF_TIMELINE_TIMEOUT_DEFAULT 1
 #define TWITTER_PREF_LIST_TIMEOUT "refresh_list_minutes"
